# alphacore

./: .gitignore  HANDOFF.md  LICENSE  README.md  RUN.sh  SETUP.sh  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  config.py  database.py  main.py  metrics.py  paper_digest.py  paper_runner.py  requirements.txt
backend/api/: __init__.py  alpha.py  backtest.py  detections.py  fix_api.py  flow.py  ha.py  health.py  heatmap.py  microstructure.py  ml.py  narrative.py  orderbook.py  rate_limit.py  regulatory.py  signals.py  websocket.py
backend/audit/: audit_logger.py
backend/backtest/: __init__.py  (+2 more)
benchmarks/: results.md  run.sh  run_benchmark.py
docs/: API_REFERENCE.md  docusaurus.config.ts  invariants.md
frontend/: CMakeLists.txt  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/benchmarks/: flat_price_map_bench.cpp  itch_bench.cpp  mpsc_bench.cpp  pool_bench.cpp
frontend/python/: test_bridge.py
frontend/src/: App.jsx  bindings.cpp  engine.cpp  engine.hpp  fault_injector.hpp  flat_price_map.cpp  flat_price_map.hpp  gateway.cpp  gateway.hpp  heartbeat.cpp  heartbeat.hpp  index.css  itch_parser.cpp  itch_parser.hpp  mpsc_queue.hpp  pool.hpp  replication.cpp  replication.hpp
frontend/src/components/: AlphaPanel.jsx  BacktestPanel.jsx  FlowGauge.jsx  HAPanel.jsx  IcebergPanel.jsx  LiquidityHeatmap.jsx  MLPanel.jsx  MicrostructurePanel.jsx  NarrativeBanner.jsx  OrderBook.jsx  ProtocolPanel.jsx  RegulatoryPanel.jsx  SignalPanel.jsx  SpoofAlert.jsx  TopBar.jsx
frontend/src/hooks/: usePolling.js  useWebSocket.js
frontend/tests/: engine_test.cpp  gateway_test.cpp  replication_test.cpp
frontend/tests/chaos/: fault_test.cpp
frontend/tla/: MatchingEngine.tla  ModelMatching.cfg  ModelMpsc.cfg  ModelOrderBook.cfg  MpscQueue.tla  OrderBook.tla
monitoring/: prometheus.yml
scripts/: restart_backend.sh
(+165 files in other folders)
